# CNS

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
config/: cns.json
scripts/: build-multi-platform.sh  install.sh
src/: config.rs  crypto.rs  dns.rs  dns_cache.rs  error.rs  http_tunnel.rs  lib.rs  main.rs  platform.rs  stats.rs  tcp.rs  tls.rs  udp.rs
