[package]
name = "cns"
version = "0.4.2"
edition = "2021"
authors = ["CuteBi <supercutename@gmail.com>"]
description = "CuteBi Network Server - A high-performance network proxy server"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# TLS support
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2"

# Certificate generation
rcgen = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Base64 encoding/decoding
base64 = "0.21"

# DNS resolution
trust-dns-resolver = "0.23"

# Async utilities
futures = "0.3"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
